# alacritty

./: Cargo.toml
.github/workflows/: wasm.yml
alacritty_pty_server/: Cargo.toml
alacritty_pty_server/src/: main.rs  protocol.rs  session.rs
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: event.rs  event_loop.rs  sync.rs  thread.rs
alacritty_terminal/src/tty/: mod.rs
alacritty_terminal/tests/: ref.rs  wasm_tests.rs
alacritty_web/: Cargo.toml  build-npm.sh  package.json
alacritty_web/src/: lib.rs  terminal.rs  websocket.rs
alacritty_web/src/renderer/: canvas2d.rs  colors.rs  glyph_cache.rs  mod.rs  rects.rs  text.rs
demo/: .gitignore  build.sh  index.html  package-lock.json  package.json
demo/src/: hooks.server.ts
demo/src/lib/: replay-data.ts
demo/src/lib/components/: AlacrittyTerminal.svelte
demo/src/routes/: +layout.svelte  +page.svelte
