[package]
name = "alacritty_pty_server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "WebSocket PTY server for Alacritty WASM port"

[[bin]]
name = "alacritty-pty-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4"
env_logger = "0.11"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
