[package]
name = "alacritty_web"
version = "0.1.0"
authors = ["Alacritty Contributors"]
license = "Apache-2.0"
description = "WASM/WebGPU terminal renderer based on Alacritty"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alacritty_terminal = { path = "../alacritty_terminal", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "CanvasRenderingContext2d",
    "OffscreenCanvasRenderingContext2d",
    "TextMetrics",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "HtmlElement",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "DomRectReadOnly",
    "Navigator",
    "Clipboard",
    "console",
    "Performance",
    "GpuCanvasContext",
    "ImageData",
] }
js-sys = "0.3"
wgpu = { version = "24", features = ["webgl"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
